# shiny-pyseed

./: .cspell.json  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  mkdocs.yml  project-words.txt  pyproject.toml  versions.json
.github/workflows/: release-new-version.yml  run-tests.yml
1.0/: 404.html  index.html  pyseed.py  sitemap.xml
1.0/CHANGELOG/: index.html
1.1/: index.html  sitemap.xml
1.1/CHANGELOG/: index.html
1.1/LICENSE/: index.html
2.0/: index.html  sitemap.xml
2.0/CHANGELOG/: index.html
scripts/: build_dist.py  commit_and_tag_version.py
src/: pyseed.py
src/data/: check_pr_workflow.yml  deploy_project_site_workflow.yml  mit_license.template.md  mkdocs_config.template.yml  pre_commit_config.yaml  pre_commit_config_simple.yaml  pyproject.template.toml  pyproject_simple.template.toml  release_new_version.py  release_new_version_workflow.yml  run_tests_workflow.template.yml  test_doctests.template.py  update_pre_commit_hooks_workflow.template.yml
tests/: test_pyseed.py
www/src/: pyseed.py
