[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.0"
ruff = "^0.3.5"
mypy = "^1.9.0"
sphinx = "^7.2.6"
mkdocs-material = "^9.5.16"
mike = { git = "https://github.com/jimporter/mike" }
pyyaml = "^6.0.1"
types-pyyaml = "^6.0.12.20240311"

[tool.mypy]
ignore_missing_imports = true

[tool.ruff]
target-version = "py39"

[tool.ruff.format]
skip-magic-trailing-comma = true

[tool.ruff.lint]
select = [
  "F",
  "E7",
  "E9",
  "W",
  "N",
  "D2",
  "D3",
  "D4",
  "ANN2",
  "B",
  "A",
  "G",
  "SIM",
  "PLC",
  "PLE",
  "PLW",
  "RUF",
]
ignore-init-module-imports = true

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true
ignore-fully-untyped = true
suppress-dummy-args = true
suppress-none-returning = true

[tool.ruff.lint.isort]
combine-as-imports = true
split-on-trailing-comma = false
